fix: user login example
